# riscv_security_contest_project

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md  update_submodules.sh
bench/: compile_asm.py  remote_test.py  soc.cpp  soc.h  soc.ld  test.py.in  ui.cpp
bench/emulation/dut_wrapper/: fpga.py
bench/emulation/libskfpga/: CMakeLists.txt
bench/emulation/libskfpga/include/: fpga.h  fpga_ioctl.h
bench/emulation/libskfpga/src/: fpga.cpp  fpga_loader.cpp  fpga_writer.cpp
bench/emulation/python/: fpga.py
bench/python/: runner.py  runner.py.in
bench/python/benchlibs/: soc.py
bench/python/lib/: soc.py
bench/rtl/: soc.cpp  soc.h  ui.cpp
bench/rtl/dut_wrapper/: soc.py
bench/rtl/libsim/: dpi.cpp  soc.cpp  soc.h  uart.cpp  ui.cpp
bench/rtl/python/benchlibs/: debug.py  soc.py
bench/test_drivers/: build.py  default.py  default_fpga.py  default_rtl.py  default_spike.py  remote_init.py  remote_test.py  runner.py.in  runner_checks.py  runner_options.py
bench/test_drivers/benchlibs/: debug.py  image_loader.py
bench/test_drivers/benchlibs/debugger/: cmd_assign.py  cmd_examine.py  cmd_print.py  cmd_reset.py  cmd_tick.py  cmd_watchpoint.py  disasm.py
bench/test_drivers/builders/: builder_asm.py  builder_c.py  builder_compliance.py  builder_zephyr.py  makefile.py
bench/test_drivers/chores/: pdeathsig.py  teelog.py
bench/tools/: CMakeLists.txt  Makefile.erb
bench/tools/fdlibm/: Makefile  __dummy_Makefile  __dummy_math.h  fdlibm.h
bench/tools/libc/: Makefile
bench/tools/libc/include/: assert.h  ctype.h  errno.h  limits.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  unistd.h
bench/tools/libc/share/: dbg.sh  soc.ld
bench/tools/libc/src/: assert.c  ctype.c  libc-start.c  stdlib.c  string.c  time.c  unistd.c
bench/tools/libc/tests/: basic.c  cmd_line.s
bench/tools/libskfpga/: CMakeLists.txt  fpga.py
bench/tools/libskfpga/include/: fpga.h
bench/tools/libskfpga/src/: fpga_reader.cpp  fpga_reset.cpp  ui.cpp
bench/tools/misc/: Makefile_asm.erb  Makefile_c.erb  Makefile_compliance.erb  Makefile_zephyr.erb  asm_tests.ld  compliance.ld  fpga_info.py  testsMakefile.include.in
bench/tools/trace/: filter_init.tcl
cmake/: ExtendedRipeTests.cmake  TestRunners.cmake  TestRunners.txt  VerilatedRTL.cmake  VerilatedRTL.txt  VerilatorLibrary.cmake  VerilatorLibrary.txt  ZephyrApplications.cmake
cmake/checks/: python.py
cmake/helpers/: zephyr_build.sh
cmake/tools/: python.cmake  toolchain.cmake  verilator.cmake
doc/: application.md
doc/arch/: memtag.md
fpga/: .fpga.ucf.swp  README.md  fpga.ucf  fpga.v  project.cfg
insns-models/: Makefile  testbench.h
models/: CMakeLists.txt
models/c_ext/: main.cpp
models/insns/: div.h  main.cpp
models/ovp/: CMakeLists.txt
models/ovp/buildutils/: builder
models/ovp/source/: Makefile
proto/: ripe_tester.py  test_cfg_generator.py
ripe/: main.c  ripe_attack_generator.c  ripe_attack_generator.h  setjmp.c  setjmp.h
ripe/junk/: setjmp.c
rtl/: Makefile  helpers.vh  soc.v  top.v
rtl/bus/: wb_ext.v  wb_mux.v
rtl/cpu/: alu.v  aludefs.vh  busdefs.vh  cpu.v  cpudefs.vh  csr.v  csrdefs.vh  decoder.v  lfsr_rnd.v  registers.v  riscvdefs.vh  wb_bus.v  wb_cpu_bus.v
rtl/ram/: generic_ram.v  wb_ram.v
rtl/timer/: wb_timer.v
rtl/uart/: wb_uart.v  wbuart.v
tests/: TestList_Asm.txt  TestList_Benchmarks.txt  TestList_C.txt  TestList_Compliance.txt  TestList_Misc.txt  TestLists.txt  asm_driver.py  basic_1.cpp  mem.py  soc.py  store_byte_issue.py  timer.py
tests/asm/: byte_test.s  csrr_missing.s  csrr_vendor.s  csrrs_compliance.s  csrrw_compliance.s  csrw_vendor.s  lb.s  mult.s  remu.s  remu_illegal.s  sb.s  sb_ret.s  st_ld.s  tags.s  timer.s  uart.s  uart_collapse.s
tests/asm/compressed/: c_add.s  c_add.s.py  c_addi.s  c_addi16sp.s  c_addi4spn.s  c_and.s  c_andi.s  c_basic.s  c_basic.s.py  c_beq.s  c_bne.s  c_fetch_flow.s  c_fetch_flow_brn.s  c_j.s  c_jal.s  c_jalr.s  c_jr.s  c_li.s  c_lui.s  c_lw.s  c_lwsp.s  c_mv.s  c_or.s  c_slli.s  c_srai.s  c_srli.s  c_sub.s  c_sw.s  c_swsp.s  c_xor.s
tests/asm/examples/: simple.s  simple.s.py
tests/asm/lib/: basic.S  boot.S  defines.S
tests/asm/mext/: div.s  divu.s  mulh.s  mulhsu.s  mulhu.s  mult.s  rem.s  remu.s  zerodiv.s
tests/asm/tags/: c_skip_sp_match.s  disabled_stlt.s  match_s_l.s  match_sp.s  mismatch_if_icd.s  mismatch_if_ice.s  mismatch_lw.s  mismatch_sw.s  pend_clear.s  ram_border.s  sec_corrupt.s  sec_leak.s  stlt_storage.s  tags.s
tests/basic/: mem.py  soc.py  store_byte_issue.py  timer.py
tests/benchmarks/coremark/: core_portme.c  core_portme.h
tests/benchmarks/crc32/: support.h
tests/benchmarks/dhrystone/: dhry.h
tests/c/basic/: main.c
tests/c/coremark/: core_portme.c
tests/c/dhrystone/: dhry_1.c
tests/c/examples/cmd_line/: cmd.line  main.c
tests/c/fibo/: fibonacci.c
tests/c/libc/abort/: abort.c
tests/c/libc/exit_fail/: exit_fail.c
tests/c/libc/exit_succ/: exit_succ.c
tests/c/libc/isalpha/: isalpha.c
tests/c/libc/isdigit/: isdigit.c
tests/c/libc/isr_route_ialign_base/: isr_route_ialign_base.c
tests/c/libc/isr_route_timer_base/: isr_route_timer_base.c
tests/c/libc/isspace/: isspace.c
tests/c/libc/isxdigit/: isxdigit.c
tests/c/libc/main_ret_fail/: main_ret_fail.c
tests/c/libc/main_ret_succ/: main_ret_succ.c
tests/c/libc/malloc/: malloc.c  secure_malloc.c
tests/c/libc/memcmp/: memcmp.c
tests/c/libc/memmove/: memmove.c
tests/c/ripe/: ripe_attack_generator.c  ripe_attack_generator.h  setjmp.c
tests/compliance/include/: compliance_io.h  riscv_test.h
tests/debugger/: debugger_sanity.s  run.sh  sanity.input  test.input
tests/v/: test.elf  test.v
tooolchain/: 0001-quick-and-dirty-wrappers-over-malloc-to-enable-addre.patch
tooolchain/binutils/: 0001-Added-csr-and-2-new-instructions-to-support-memory-t.patch  0002-Added-RND-csr-for-memory-tagging-usage.patch
tooolchain/newlib/: 0002-bug-newlib-allocations-should-be-divisible-by-granul.patch
zephyrproject/zephyr/: CMakeLists.txt
zephyrproject/zephyr/scripts/: requirements.txt
(+162 files in other folders)
